[project]
name = "torch-rmve"
version = "0.1.0"
description = "Torch implementation of the RMVPE model"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["pytorch", "torch", "rmvpe", "pitch", "audio", "f0", "machine learning"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "librosa",
    "numpy",
    "scipy",
    "torch",
    "safetensors",
]

[project.urls]
homepage = "https://github.com/mert-kurttutan/torch-rmve"
repository = "https://github.com/mert-kurttutan/torch-rmve"


[build-system]
requires = ["hatchling>=1.22.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/torch_rmve"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
